--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
 				<div id="left"> Email: <p> Password:</div>
 				<div id="right"><textarea></textarea><br><textarea></textarea></div>
 			</div><p>
-			<a href="signup.html">Click Here to Register</a>
+			<a href="contact.html">Click Here to Register</a>
 		</div>
 	</div>
 </div>
