--- a/index.html
+++ b/index.html
@@ -7,85 +7,16 @@
 
 </head>
 <body>
+<div class="outer">
+	<div class="middle">
+		<div class="inner">
 
-<!--******************************************************-->
-<!--                  START OF HEADER                     -->
-<!--******************************************************-->
-
-<header>
-	<div class="headcontainer">
-		<div id="headerlogo">
-			<img src="img/headerlogo.png">
-		</div>
-		<div id="searchfield">
-			<div id="searchbox">
-				<form id="f1" name="f1" action="javascript:void()" onsubmit="if(this.t1.value!=null &amp;&amp; this.t1.value!='') parent.findString(this.t1.value);return false;">
-					<img src="img/search.png">
-					<input type="text" id="t1" name="t1" value=" " size="20">
-				</form >
-			</div> 
-		</div>
-		<div id="socialmedia">
-				<a href="https://www.facebook.com/1007144285991346" id="facebook" ><img src="img/facebook.png"></a>
-				<a href="https://www.youtube.com/channel/UCdpzggD0Kme92GaAmxVeNGA" id="youtube" ><img src="img/youtube.png"></a>
-				<a href="https://twitter.com/NewVintageDsign" id="twitter" ><img src="img/twitter.png"></a>
-		</div>
-	</div>
-</header>
-<div id="nav">
-	<div class="headcontainer">
-		<div id="links">
-				<a class="navbutton" id="homebutton" href="index.html"><img src="img/homeicon.png"> Home</a>
-				<a class="navbutton" id="websitesbutton" href="websites.html"><img src="img/websitesicon.png"> Websites</a>
-				<a class="navbutton" id="designbutton" href="design.html"><img src="img/designicon.png"> Design</a>
-				<a class="navbutton" id="blogbutton" href="about.html"><img src="img/blogicon.png">About</a>
-				<a class="navbutton" id="contactbutton" href="contact.html"><img src="img/contacticon.png"> Contact</a>
-		</div>
-		<div id="login">
-				<a class="navbutton" id="loginbutton" href="login.html"><img src="img/loginicon.png"> Login</a>
-				<a class="navbutton" id="signupbutton" href="login.html"><img src="img/signupicon.png"> Sign Up</a>
-		</div>
-	</div>
-</div>
-
-<!--******************************************************-->
-<!--                  END OF HEADER                       -->
-<!--******************************************************-->
-
-<!--******************************************************-->
-<!--                  START OF MAIN                       -->
-<!--******************************************************-->
-
-<div id="hide-header"></div>
-	<div class="main" id="home">
-		<div class="container" id="home-e">
 			<img src="img/nvdlogo.jpg"><p>
-			<h1>A Premium Digital Creative Agency</h1><p>
-			<a href="about.html" id="link">Learn More</a>
+			<h1>EPIC DESIGN. EPIC PRICE.</H1>
+			<H2>COMING SOON.</H2>
+
 		</div>
 	</div>
 </div>
-
-<!--******************************************************-->
-<!--                  END OF MAIN                       -->
-<!--******************************************************-->
-
-
-<!-- JQUERY PLUGIN & SEARCH FEATURE -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/search.js"></script> 
-
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-68362212-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
 </body>
 </html>
