Updated SEO for TEMP

--- a/index.html
+++ b/index.html
@@ -1,20 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>New Vintage Design </title>
+	<title>Canada's Premium Web Design Company</title>
 <link rel="stylesheet" type="text/css" href="css/header.css">
 <link rel="stylesheet" type="text/css" href="css/home.css">
+<link href="https://example.com/" rel="canonical" />
+
+
+<!-- Open Graph data -->
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+<meta property="og:title" content="New Vintage Design" />
+<meta property="og:type" content="Website" />
+<meta property="og:url" content="http://www.newvintagedesign.ca/" />
+<meta property="og:image" content="http://newvintagedesign.ca/img/small-logo.jpg" /> 
+<meta property="og:description" content="Canada's Premium Web & Graphic Design Company" /> 
+<meta property="og:site_name" content="New Vintage Design" /> <meta property="fb:app_id" content="983816071669751" />
+
+<!-- Twitter Card data -->
+<meta name="twitter:card" content="Canada's Premium Web Design Company">
+<meta name="twitter:site" content="@newvintagedsign">
+<meta name="twitter:title" content="New Vintage Design">
+<meta name="twitter:description" content="We make brands shine. Get your own custom built site starting at $800.">
+<meta name="twitter:creator" content="@newvintagedsign">
+<!-- Twitter Summary card images must be at least 120x120px --> <meta name="twitter:image" content="http://newvintagedesign.ca/img/small-logo.jpg">
+
+<meta name="description" content="Epic Websites. Epic Prices.">
+<meta name="keywords" content="ナビゲーションのスキップ, Premium, Web, Graphic, Designer, Design, London, Ontario, Canada, SEO, Digital, Creative, Agency, Branding, Brands">
 
 </head>
 <body>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '983816071669751',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
+
 <div class="outer">
 	<div class="middle">
 		<div class="inner">
 
-			<img src="img/nvdlogo.jpg"><p>
+			<img src="img/nvdlogo.jpg" alt="New Vintage Design Logo" ><p>
 			<h1>EPIC DESIGN. EPIC PRICE.</H1>
 			<H2>COMING SOON.</H2>
-
 		</div>
 	</div>
 </div>
