--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Canada's Premium Web Design Company</title>
-<link rel="stylesheet" type="text/css" href="css/header.css">
-<link rel="stylesheet" type="text/css" href="css/home.css">
+<title>Canada's Premium Web Design Company</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <link href="https://example.com/" rel="canonical" />
 
 
