--- a/resources/seo.html
+++ b/resources/seo.html
@@ -42,6 +42,12 @@
 		font-size: 12px;
 		font-weight: normal;
 	}
+	#longform{
+		height: 20px;
+		width: 350px;
+		font-size: 12px;
+		font-weight: normal;
+	}
 
 </style>
 
@@ -55,8 +61,8 @@
 <h2>Name of Person Designing Website:</h2> <input type="textbox" id="company" Value="Your Name"></input><p>
 <h2>Starting Date of Website Development:</h2> <input type="textbox" id="company" Value="YYYY-MM-DD"></input><p>
 <br>**NOTE: PLEASE USE THE SAME EMAIL AND PASSWORD FOR ALL ACCOUNT LOGINS PERTAINING TO THIS CLIENT.
-<h2>Master Email:</h2> <input type="textbox" id="company" Value="e@mail.com"></input><p>
-<h2>Master Password:</h2> <input type="textbox" id="company" Value="fishing"></input><p>
+<h2>Master Email:</h2> <input type="textbox" id="longform" Value="e@mail.com"></input><p>
+<h2>Master Password:</h2> <input type="textbox" id="longform" Value="fishing"></input><p>
 </div>
 
 <div id="wrapper">
@@ -105,7 +111,7 @@ Create a Robots.txt file and submit it in Google and Bing Webmaster Tools.</li>
 Ensure site is mobile friendly / optimized.</li>
 
 <li><input id="lpo32" type="checkbox" /> 
-Check <a href="http://mysiteauditor.com/">My Site Auditor Report</a> to double-check site once it is live.</li>
+Check <a href="http://www.w3schools.com/website/web_validate.asp">Web Site Validator</a> to double-check site once it is live.</li>
 
 <li><input id="lpo28" type="checkbox" /> 
 If desired, create social media pages for client.<p>
