Published with https://stackedit.io/

--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Canada's Premium Web Design Company</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://example.com/" rel="canonical" />
+Canada’s Premium Web Design Company.
+
+
 
 
 <!-- Open Graph data -->
-<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
-<meta property="og:title" content="New Vintage Design" />
-<meta property="og:type" content="Website" />
-<meta property="og:url" content="http://www.newvintagedesign.ca/" />
-<meta property="og:image" content="http://newvintagedesign.ca/img/small-logo.jpg" /> 
-<meta property="og:description" content="Canada's Premium Web & Graphic Design Company" /> 
-<meta property="og:site_name" content="New Vintage Design" /> <meta property="fb:app_id" content="983816071669751" />
+
+
+
+
+ 
+ 
+ 
 
 <!-- Twitter Card data -->
-<meta name="twitter:card" content="Canada's Premium Web Design Company">
-<meta name="twitter:site" content="@newvintagedsign">
-<meta name="twitter:title" content="New Vintage Design">
-<meta name="twitter:description" content="We make brands shine. Get your own custom built site starting at $800.">
-<meta name="twitter:creator" content="@newvintagedsign">
-<!-- Twitter Summary card images must be at least 120x120px --> <meta name="twitter:image" content="http://newvintagedesign.ca/img/small-logo.jpg">
 
-<meta name="description" content="Epic Websites. Epic Prices.">
-<meta name="keywords" content="ナビゲーションのスキップ, Premium, Web, Graphic, Designer, Design, London, Ontario, Canada, SEO, Digital, Creative, Agency, Branding, Brands">
 
-</head>
-<body>
-<script>
+
+
+
+<!-- Twitter Summary card images must be at least 120x120px --> 
+
+
+
+
+
+
+
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '983816071669751',
@@ -44,21 +41,21 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-</script>
+
 
 
 <div class="outer">
-	<div class="middle">
-		<div class="inner">
+    <div class="middle">
+        <div class="inner">
 
-			<img src="img/nvdlogo.jpg" alt="New Vintage Design Logo" ><p>
-			<h1>EPIC DESIGN. EPIC PRICE.</H1>
-			<H2>COMING SOON.</H2>
-		</div>
-	</div>
+            <img src="img/nvdlogo.jpg" alt="New Vintage Design Logo"><p>
+            </p><h1 id="epic-design-epic-price">EPIC DESIGN. EPIC PRICE.</h1>
+            <h2 id="coming-soon">COMING SOON.</h2>
+        <p></p></div>
+    </div>
 </div>
 
-<script>
+
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -67,6 +64,6 @@
   ga('create', 'UA-68362212-1', 'auto');
   ga('send', 'pageview');
 
-</script>
-</body>
-</html>
+
+
+<p></p> <br>
