--- a/index.html
+++ b/index.html
@@ -1,63 +1,116 @@
 <!DOCTYPE html>
 <html>
-<html lang="en">
 <head>
-  <title>New Vintage Design </title>
-  <title>Canada's Premium Web Design Company</title>
-<link rel="stylesheet" type="text/css" href="css/header.css">
-<link rel="stylesheet" type="text/css" href="css/home.css">
-<link href="https://example.com/" rel="canonical" />
-
-
-<!-- Open Graph data -->
-<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
-<meta property="og:title" content="New Vintage Design" />
-<meta property="og:type" content="Website" />
-<meta property="og:url" content="http://www.newvintagedesign.ca/" />
-<meta property="og:image" content="http://newvintagedesign.ca/img/small-logo.jpg" /> 
-<meta property="og:description" content="Canada's Premium Web & Graphic Design Company" /> 
-<meta property="og:site_name" content="New Vintage Design" /> <meta property="fb:app_id" content="983816071669751" />
-
-<!-- Twitter Card data -->
-<meta name="twitter:card" content="Canada's Premium Web Design Company">
-<meta name="twitter:site" content="@newvintagedsign">
-<meta name="twitter:title" content="New Vintage Design">
-<meta name="twitter:description" content="We make brands shine. Get your own custom built site starting at $800.">
-<meta name="twitter:creator" content="@newvintagedsign">
-<!-- Twitter Summary card images must be at least 120x120px --> <meta name="twitter:image" content="http://newvintagedesign.ca/img/small-logo.jpg">
-
-<meta name="description" content="Epic Websites. Epic Prices.">
-<meta name="keywords" content="ナビゲーションのスキップ, Premium, Web, Graphic, Designer, Design, London, Ontario, Canada, SEO, Digital, Creative, Agency, Branding, Brands">
-
+	<title>New Vintage Design</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '983816071669751',
-      xfbml      : true,
-      version    : 'v2.5'
-    });
-  };
+	<div class="sky">
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+		<!-- NEW VINTAGE DESIGN ELEMENT -->
+		<div class="outer" id="logo">
+			<div class="middle">
+				<img src="img/nvdlogo.png" id="nvdlogo"><br>
+				<div class="slogans">
+					<div id="slogan1">
+						WEBSITE DESIGN
+					</div>
+					<div id="slogan2">
+						GRAPHIC DESIGN
+					</div>
+					<div id="slogan3">
+						APP DESIGN
+					</div>
+				</div>
+			</div>
+		</div>
 
+		<!-- PAGE CONTENT -->
+		<div class="content" id="scroll">
+			<!-- <div class="blank"></div> -->
+			<div class="buildings">
+				<img src= "img/buildings.png" id="buildings">
+			</div>
+			<div class="reflection"></div>
+			<div class="water">
+				<div class="main" id="websites">
+				<div class="container" id="websites-e">
+					<h1>FEATURED</h1>
+					<h2>WORK</h2>
+					<div id="featured">
+							<div id="item">
+								<a href="http://www.tobogganbrewing.com"><img src="img/toboggan.jpg" target="_blank"></a>
+							</div>
+							<div id="item">
+								<a href="http://www.joekoolsrestaurant.ca"><img src="img/kools.jpg" target="_blank"></a>
+							</div>
+							<div id="item">
+								<a href="http://fellinikoolini.com" target="_blank"><img src="img/fellinis.jpg"></a>
+							</div>
+						</div>
+				</div>
+				</div>
+				<div class="contact-box">
+					<p>
+					<h3>WE'RE MORE THAN A WEB DESIGN COMPANY...</h3>
+					We're your internet marketing team - we help you take your brand into the digital world. We're your e-commerce specialists - we know the best practices for accepting payments online or in-store. And most importantly, we're creative minds that have backgrounds in product design, software engineering and video games, we love brainstorming.
+					</p>
+					<p>
+					We've worked with some of the biggest names in London to create eye-popping graphics and buttery smooth websites. But we're on a mission to make the entire internet a little more beautiful, so don't hesitate to get in touch with us about your project, we love to help.
+					</p>
+				</div>
+			</div>
+			<div class="contact">
+				<img src="img/jellyfish.jpg">
+				<h1>CONTACT US</h1>
+				<iframe src="contact/form.html"></iframe>
 
-<div class="outer">
-  <div class="middle">
-    <div class="inner">
+			</div>
+			<footer>
+			<a href="https://www.facebook.com/1007144285991346"><img src="img/facebook.png"></a>
+			<a href="https://twitter.com/NewVintageDsign"><img src="img/twitter.png"></a>
+			<a href="https://plus.google.com/110977283828693888182"><img src="img/googleplus.png"></a><br>
+			&copy; 2015 New Vintage Design
+			</footer>
+		</div>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      <img src="img/nvdlogo.jpg" alt="New Vintage Design Logo" ><p>
-      <h1>EPIC DESIGN. EPIC PRICE.</H1>
-      <H2>COMING SOON.</H2>
+	  ga('create', 'UA-68362212-1', 'auto');
+	  ga('send', 'pageview');
 
-    </div>
-  </div>
-</div>
+	</script>
+	<script>
+		var current = 3;
+		var dissapear = true;
+		function fade() {
+			if( current == 1){
+				dissapear = false;
+			}
+			if( current == 3 ){
+				dissapear = true;
+			}
+
+			if(dissapear == true){
+			   	$('#slogan' + current).fadeOut(1500);
+			   	--current;
+			   	$('#slogan'+ current).fadeIn(2000);
+			   setTimeout(fade,3000);
+			}
+			else{
+			   	$('#slogan1').fadeOut(1500);
+			   	$('#slogan3').fadeIn(2000);
+			   	current = 3;
+			   setTimeout(fade,3000);
+			}
+
+		}
+		fade();
+	</script>
+</body>
+</html>
