--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>New Vintage Design</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
+<title>New Vintage Design - Graphic & Web</title>
+<meta name="Description" content="We're your internet marketing team - we help you take your brand into the digital world. We're your e-commerce specialists - we know the best practices for accepting payments online or in-store. And most importantly, we're creative minds that have backgrounds in product design, software engineering and video games, we love brainstorming.">
+<meta name="Keywords" content="Graphic Design, Web Design, Websites, Custom Applications, Programming, Developer, iOS, Android, Mac, Windows, London, Ontario, Digital, Online Marketing">
+
 </head>
 <body>
 	<div class="sky">
