--- a/index.html
+++ b/index.html
@@ -1,120 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>New Vintage Design</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ >
-<title>New Vintage Design - Graphic & Web</title>
-<meta name="Description" content="We're your internet marketing team - we help you take your brand into the digital world. We're your e-commerce specialists - we know the best practices for accepting payments online or in-store. And most importantly, we're creative minds that have backgrounds in product design, software engineering and video games, we love brainstorming.">
-<meta name="Keywords" content="Graphic Design, Web Design, Websites, Custom Applications, Programming, Developer, iOS, Android, Mac, Windows, London, Ontario, Digital, Online Marketing">
-
 </head>
 <body>
-	<div class="sky">
 
-		<!-- NEW VINTAGE DESIGN ELEMENT -->
-		<div class="outer" id="logo">
-			<div class="middle">
-				<img src="img/nvdlogo.png" id="nvdlogo"><br>
-				<div class="slogans">
-					<div id="slogan1">
-						WEBSITE DESIGN
-					</div>
-					<div id="slogan2">
-						GRAPHIC DESIGN
-					</div>
-					<div id="slogan3">
-						APP DESIGN
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- PAGE CONTENT -->
-		<div class="content" id="scroll">
-			<!-- <div class="blank"></div> -->
-			<div class="buildings">
-				<img src= "img/buildings.png" id="buildings">
-			</div>
-			<div class="reflection"></div>
-			<div class="water">
-				<div class="main" id="websites">
-				<div class="container" id="websites-e">
-					<h1>FEATURED</h1>
-					<h2>WORK</h2>
-					<div id="featured">
-							<div id="item">
-								<a href="http://www.tobogganbrewing.com"><img src="img/toboggan.jpg" target="_blank"></a>
-							</div>
-							<div id="item">
-								<a href="http://www.joekoolsrestaurant.ca"><img src="img/kools.jpg" target="_blank"></a>
-							</div>
-							<div id="item">
-								<a href="http://fellinikoolini.com" target="_blank"><img src="img/fellinis.jpg"></a>
-							</div>
-						</div>
-				</div>
-				</div>
-				<div class="contact-box">
-					<p>
-					<h3>WE'RE MORE THAN A WEB DESIGN COMPANY...</h3>
-					We're your internet marketing team - we help you take your brand into the digital world. We're your e-commerce specialists - we know the best practices for accepting payments online or in-store. And most importantly, we're creative minds that have backgrounds in product design, software engineering and video games, we love brainstorming.
-					</p>
-					<p>
-					We've worked with some of the biggest names in London to create eye-popping graphics and buttery smooth websites. But we're on a mission to make the entire internet a little more beautiful, so don't hesitate to get in touch with us about your project, we love to help.
-					</p>
-				</div>
-			</div>
-			<div class="contact">
-				<img src="img/jellyfish.jpg">
-				<h1>CONTACT US</h1>
-				<iframe src="contact/form.html"></iframe>
-
-			</div>
-			<footer>
-			<a href="https://www.facebook.com/1007144285991346"><img src="img/facebook.png"></a>
-			<a href="https://twitter.com/NewVintageDsign"><img src="img/twitter.png"></a>
-			<a href="https://plus.google.com/110977283828693888182"><img src="img/googleplus.png"></a><br>
-			&copy; 2015 New Vintage Design
-			</footer>
+<div class="wrapper">
+	
+	<!-- NAV PANE  [ Height:100px | Width:100% ] -->
+	<div class="nav">
+		<button class="menu"><img src="img/blue-menu.png">
+		</button>
+		<div class="links">
+			<ul>
+				<li><a href="">Call Now: 1 (226) 700-9400</a></li>
+			</ul>
 		</div>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-68362212-1', 'auto');
-	  ga('send', 'pageview');
+	<div class="content">
+	<!-- CONTENT STARTS HERE -->
+	<div class="splash"></div>
+	<div class="about">
+		<div class="one">
+		<img src="img/draw.png"><p>
+		Graphics<br>
+		---------<p>
+		Logos, business cards, banners and just about anything that needs the keen eye of a designer. We are both technically savy and artists, so we'll make sure every detail of your works are taken care of. 
+		</div>
+		<div class="two">
+		<img src="img/mac.png"><p>
+		Websites<br>
+		---------<p>
+		Our websites are like no other, they are full featured and built from scratch so that it looks and feels just how you want. When we hand the keys over to you, we give you the power you need to make little changes, but we're always here for the big stuff too. 
+		</div>
+		<div class="three">
+		<img src="img/ipad.png"><p>
+		Custom Apps	<br>
+		----------<p>
+		We create custom applications for companies in need of: ordering systems, warehouse management, customer rewards programs and just about everything else. 
+		</div>
+	</div>
 
-	</script>
-	<script>
-		var current = 3;
-		var dissapear = true;
-		function fade() {
-			if( current == 1){
-				dissapear = false;
-			}
-			if( current == 3 ){
-				dissapear = true;
-			}
+	<div class="portfolio">
+		<div class="center">
+			<div class="top">
+				<div class="top-left"><img src="img/Disney_Logo.png"></div>
+				<div class="top-middle"><img src="img/Toboggan_Logo.png"></div>
+				<div class="top-right"><img src="img/Abc_Logo.png"></div>
+			</div>
+			<div class="bottom">
+				<div class="bottom-left"><img src="img/Sapphire_Logo.png"></div>
+				<div class="bottom-middle-left"><img src="img/Stinson_Logo.png"></div>
+				<div class="bottom-middle-right"><img src="img/Century_21_Logo.png"></div>
+				<div class="bottom-right"><img src="img/Avlo_Logo.png"></div>
+			</div>
+		</div>
+	</div>
 
-			if(dissapear == true){
-			   	$('#slogan' + current).fadeOut(1500);
-			   	--current;
-			   	$('#slogan'+ current).fadeIn(2000);
-			   setTimeout(fade,3000);
-			}
-			else{
-			   	$('#slogan1').fadeOut(1500);
-			   	$('#slogan3').fadeIn(2000);
-			   	current = 3;
-			   setTimeout(fade,3000);
-			}
+	<div class="testimonials">
+		<div class="table-cell">
+			<p>
+			Everyday a new idea is born, ready to catch the world on fire. 
+			</p>
+		</div>
+	</div>
 
-		}
-		fade();
-	</script>
+		
+	<!-- CONTENT ENDS HERE -->
+	</div>
+
+	<div class="contact">
+		<p>
+		<h3>contact us</h3>
+		<form>
+			<input type="textbox" value="your name" id="c-name" class="c-short">
+			</input>
+			<input type="textbox" value="your email" id="c-email" class="c-short">
+			</input>
+			<textarea value="message" rows="5" id="c-message" class="c-long">message</textarea>
+			</input><br>
+			<input type="submit" id="c-button" class="c-submit" value="send">
+			</input>
+		</form>
+		</p>
+	</div>
+
+
+	<div class="footer">
+		<div class="footer-left">
+			&copy; 2015 New Vintage Design
+		</div>
+		<div class="footer-middle">
+			<button onClick="contact()" class="chat-button"><img src="img/chat.png"></button>
+		</div>
+		<div class="footer-right">
+			803 Talbot Street, London Canada
+		</div>
+	</div>
+
+
+</div>
+
 </body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/contact.js"></script>
 </html>
