--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<img src="img/draw.png"><p>
 		Graphics<br>
 		---------<p>
-		Logos, business cards, banners and just about anything that needs the keen eye of a designer. We are both technically savy and artists, so we'll make sure every detail of your works are taken care of. 
+		Logos, business cards, banners and just about anything that needs the keen eye of a designer. We are both technologically savy and artistic, so we'll make sure every detail of your work is taken care of. 
 		</div>
 		<div class="two">
 		<img src="img/mac.png"><p>
