--- a/mobile.html
+++ b/mobile.html
@@ -2,11 +2,7 @@
 <html>
 <head>
 	<title>New Vintage Design</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="js/contact.js"></script>
-	<script type="text/javascript" src="js/mobile.min.js"></script>
-  	<script type="text/javascript">DM_redirect("mobile/mobile.html");</script>
+	<link rel="stylesheet" type="text/css" href="css/mobilestyle.css">
 </head>
 <body>
 
@@ -17,9 +13,7 @@
 		<button class="menu"><img src="img/blue-menu.png">
 		</button>
 		<div class="links">
-			<ul>
-				<li><a href="">Call Now: 1 (226) 700-9400</a></li>
-			</ul>
+			
 		</div>
 	</div>
 
@@ -54,12 +48,7 @@
 				<div class="top-middle"><img src="img/Toboggan_Logo.png"></div>
 				<div class="top-right"><img src="img/Abc_Logo.png"></div>
 			</div>
-			<div class="bottom">
-				<div class="bottom-left"><img src="img/Sapphire_Logo.png"></div>
-				<div class="bottom-middle-left"><img src="img/Stinson_Logo.png"></div>
-				<div class="bottom-middle-right"><img src="img/Century_21_Logo.png"></div>
-				<div class="bottom-right"><img src="img/Avlo_Logo.png"></div>
-			</div>
+
 		</div>
 	</div>
 
@@ -75,37 +64,10 @@
 	<!-- CONTENT ENDS HERE -->
 	</div>
 
-	<div class="contact">
-		<p>
-		<h3>contact us</h3>
-		<form>
-			<input type="textbox" value="your name" id="c-name" class="c-short">
-			</input>
-			<input type="textbox" value="your email" id="c-email" class="c-short">
-			</input>
-			<textarea value="message" rows="5" id="c-message" class="c-long">message</textarea>
-			</input><br>
-			<input type="submit" id="c-button" class="c-submit" value="send">
-			</input>
-		</form>
-		</p>
-	</div>
-
-
-	<div class="footer">
-		<div class="footer-left">
-			&copy; 2015 New Vintage Design
-		</div>
-		<div class="footer-middle">
-			<button onClick="contact()" class="chat-button"><img src="img/chat.png"></button>
-		</div>
-		<div class="footer-right">
-			803 Talbot Street, London Canada
-		</div>
-	</div>
-
 
 </div>
 
 </body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="js/contact.js"></script>
 </html>
