--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/contact.js"></script>
 	<script type="text/javascript" src="js/mobile.min.js"></script>
-  	<script type="text/javascript">DM_redirect("mobile/mobile.html");</script>
+  	<script type="text/javascript">DM_redirect("mobile.html");</script>
 </head>
 <body>
 
