--- a/index.html
+++ b/index.html
@@ -1,111 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>New Vintage Design</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="js/contact.js"></script>
-	<script type="text/javascript" src="js/mobile.min.js"></script>
-  	<script type="text/javascript">DM_redirect("mobile.html");</script>
+	<title>Redirecting...</title>
 </head>
 <body>
-
-<div class="wrapper">
-	
-	<!-- NAV PANE  [ Height:100px | Width:100% ] -->
-	<div class="nav">
-		<button class="menu"><img src="img/blue-menu.png">
-		</button>
-		<div class="links">
-			<ul>
-				<li><a href="">Call Now: 1 (226) 700-9400</a></li>
-			</ul>
-		</div>
-	</div>
-
-	<div class="content">
-	<!-- CONTENT STARTS HERE -->
-	<div class="splash"></div>
-	<div class="about">
-		<div class="one">
-		<img src="img/draw.png"><p>
-		Graphics<br>
-		---------<p>
-		Logos, business cards, banners and just about anything that needs the keen eye of a designer. We are both technologically savy and artistic, so we'll make sure every detail of your work is taken care of. 
-		</div>
-		<div class="two">
-		<img src="img/mac.png"><p>
-		Websites<br>
-		---------<p>
-		Our websites are like no other, they are full featured and built from scratch so that it looks and feels just how you want. When we hand the keys over to you, we give you the power you need to make little changes, but we're always here for the big stuff too. 
-		</div>
-		<div class="three">
-		<img src="img/ipad.png"><p>
-		Custom Apps	<br>
-		----------<p>
-		We create custom applications for companies in need of: ordering systems, warehouse management, customer rewards programs and just about everything else. 
-		</div>
-	</div>
-
-	<div class="portfolio">
-		<div class="center">
-			<div class="top">
-				<div class="top-left"><img src="img/Disney_Logo.png"></div>
-				<div class="top-middle"><img src="img/Toboggan_Logo.png"></div>
-				<div class="top-right"><img src="img/Abc_Logo.png"></div>
-			</div>
-			<div class="bottom">
-				<div class="bottom-left"><img src="img/Sapphire_Logo.png"></div>
-				<div class="bottom-middle-left"><img src="img/Stinson_Logo.png"></div>
-				<div class="bottom-middle-right"><img src="img/Century_21_Logo.png"></div>
-				<div class="bottom-right"><img src="img/Avlo_Logo.png"></div>
-			</div>
-		</div>
-	</div>
-
-	<div class="testimonials">
-		<div class="table-cell">
-			<p>
-			Everyday a new idea is born, ready to catch the world on fire. 
-			</p>
-		</div>
-	</div>
-
-		
-	<!-- CONTENT ENDS HERE -->
-	</div>
-
-	<div class="contact">
-		<p>
-		<h3>contact us</h3>
-		<form>
-			<input type="textbox" value="your name" id="c-name" class="c-short">
-			</input>
-			<input type="textbox" value="your email" id="c-email" class="c-short">
-			</input>
-			<textarea value="message" rows="5" id="c-message" class="c-long">message</textarea>
-			</input><br>
-			<input type="submit" id="c-button" class="c-submit" value="send">
-			</input>
-		</form>
-		</p>
-	</div>
-
-
-	<div class="footer">
-		<div class="footer-left">
-			&copy; 2015 New Vintage Design
-		</div>
-		<div class="footer-middle">
-			<button onClick="contact()" class="chat-button"><img src="img/chat.png"></button>
-		</div>
-		<div class="footer-right">
-			803 Talbot Street, London Canada
-		</div>
-	</div>
-
-
-</div>
-
+redirecting...
 </body>
+	<script>
+		location.href = location.origin + "/newvintagedesign/";
+	</script>
 </html>
