Site nearly complete
needs contact form and link creation.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Redirecting...</title>
+	<title>New Vintage Design</title>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-redirecting...
+	<header>
+		<img id="logo" src="./img/nvd.jpg">
+		<input type="button" class="hamburger" value="&#9776;"/>
+		<div class="links">
+			<input type="button" class="top-links" value="home" src="#"/>
+			<input type="button" class="top-links" value="services" src="#"/>
+			<input type="button" class="top-links" value="Our Clients" src="#"/>
+			<input type="button" class="top-links" value="contact us" src="#"/>
+		</div>
+	</header>
+	<main>
+		
+		<section>
+			<img id="splash" src="/img/splash.jpg">
+		</section>
+
+		<section>
+			<div class="third">
+				<img class="visual" src="img/graphics.jpg">
+				<span class="title">Graphics</span>
+				<span class="divider">---------</span>
+				<p class="description">
+					Logos, business cards, banners and just about anything that needs the keen eye of a designer. 
+					<br>We are both technologically savy and artistic, so we'll make sure every detail of your brand is taken care of.
+				</p>
+			</div>
+			<div  class="third">
+				<img class="visual" src="img/websites.jpg">
+				<span class="title">Websites</span>
+				<span class="divider">---------</span>
+				<p class="description">
+					Our websites are like no other, they are full featured and built from scratch so that it looks and feels just how you want. 
+					When we hand the keys over to you, we give you the power you need to make little changes, but we're always here for the big stuff too.
+				</p>
+			</div>
+			<div class="third">
+				<img class="visual" src="img/apps.jpg">
+				<span class="title">Custom Apps</span>
+				<span class="divider">---------</span>
+				<p class="description">
+					Have an idea that could change the world? We create custom applications for those in need of something more complex: ordering systems, warehouse management, customer rewards programs and just about everything else.
+				</p>
+			</div>
+		</section>
+
+		<section>
+			<span class="clients-title">Our Clients so far:</span>
+			<div class="clients-container">
+				<img class="client" src="../img/Disney_Logo.png">
+				<img class="client" src="../img/Toboggan_Logo.png">
+				<img class="client" src="../img/Abc_Logo.png"><br>
+				<img class="client" src="../img/Sapphire_Logo.png">
+				<img class="client" src="../img/Stinson_Logo.png">
+				<img class="client" src="../img/Century_21_Logo.png">
+				<img class="client" src="../img/Avlo_Logo.png">
+			</div>
+		</section>
+
+	</main>
+	<footer>
+		<div class="contact-info"></div>
+		<div class="contact-form">
+			<form>
+				<input type="text" name="name" placeholder="Your Name" />
+				<input type="email" name="email" placeholder="Email Address">
+				<input type="text" name="comments" placeholder="Comments/Questions">
+			</form>
+		</div>
+	</footer>
+
 </body>
-	<script>
-		location.href = location.origin + "/newvintagedesign/";
-	</script>
 </html>
