--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 				<p id="paragraph">
 				<center>
 				<h1><font color="Black">404 - This Page Doesn't Exist!</font></h1>
-				<img src="http://www.votelyac.ca/app/img/wrong.jpg">
+				<img src="/app/img/wrong.jpg">
 				</p>
 		</div>
 	</div>
