--- a/location/index.html
+++ b/location/index.html
@@ -34,7 +34,8 @@
         <input type="text" id="auto-comp"/><br>
     <div id="vote-container">
         <input type="button" class="btn btn-primary btn-md" id="vote" value="This is my address"/>
-    </div>
+    </div><br>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6p3Z6MsgmFUL75GMmk6C2hSx1CTgQ-iZ0wc6Xfnyiz48-iA/viewform?usp=sf_link">If You Live on a Reservation, Click Here to Vote.</a>
 </div>
 </div>
 
