--- a/vote/index.html
+++ b/vote/index.html
@@ -34,21 +34,20 @@
             <input type="text" class="form-control" name="email_address" placeholder="name@domain.com"/>
         </div>
         <div class="form-group">
-            <input type="number" class="form-control" name="cell_number" placeholder="Cell Phone Number"/>
+            <input type="phone" class="form-control" name="cell_number" placeholder="Cell Phone Number"/>
             <span id="text_opt_in"></span></div>
             To confirm your vote, we will send you either a text message or email with a verification code.
             <br> Your vote will not be counted until you have been verified.
         <hr>
         <h4>Your Vote (One Vote Per Person)</h4>
-        View The Candidate Profiles <a href="http://www.lyaccandidates.ca/" target="_blank">Here</a><br><br>
+        View The Candidate Profiles <a href="https://lyac.ca/2017-lyac-candidates/" target="_blank">Here</a><br><br>
         <div class="form-group" id="candidates_go_here">
         </div>
         <hr>
         <h4>Referendum</h4>
         <div class="form-group">
-            <label>Would you be in favour of creating a discounted bus pass for high schoolers in London?</label><br>
-            <input type="radio" name="referendum" value="Yes"> Yes</label><br>
-            <input type="radio" name="referendum" value="No"> No</label>
+            <label>What do you see as the most pressing issue London is facing right now?</label><br>
+            <input type="text" name="referendum" width="100%"></label>
         </div>
         <hr>
         <div class="form-group">
