--- a/location/index.html
+++ b/location/index.html
@@ -9,7 +9,7 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.5.2/mapbox.js'></script>
     <script src='../app/js/leaflet-pip.min.js'></script>
     <script type="text/javascript"
-            src="https://maps.google.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
+            src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;location=ca&amp;key=AIzaSyCqRXqCtwf1xlUKeztz5q3z1BiI43OIkDc"></script>
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="../app/css/vendor.min.css">
     <link rel="stylesheet" type="text/css" href="location.css">
@@ -35,7 +35,7 @@
     <div id="vote-container">
         <input type="button" class="btn btn-primary btn-md" id="vote" value="This is my address"/>
     </div><br>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6p3Z6MsgmFUL75GMmk6C2hSx1CTgQ-iZ0wc6Xfnyiz48-iA/viewform?usp=sf_link">If You Live on a Reservation, Click Here to Vote.</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6p3Z6MsgmFUL75GMmk6C2hSx1CTgQ-iZ0wc6Xfnyiz48-iA/viewform?usp=sf_link">If You Live on a Reservation or are homeschooled, Click Here to Vote.</a>
 </div>
 </div>
 
