referendum & window update 2019

--- a/vote/index.html
+++ b/vote/index.html
@@ -40,13 +40,13 @@
             <br> Your vote will not be counted until you have been verified.
         <hr>
         <h4>Your Vote (One Vote Per Person)</h4>
-        View The Candidate Profiles <a href="https://lyac.ca/2018-lyac-candidates/" target="_blank">Here</a><br><br>
+        View The Candidate Profiles <a href="https://lyac.ca/election" target="_blank">Here</a><br><br>
         <div class="form-group" id="candidates_go_here">
         </div>
         <hr>
         <h4>Referendum</h4>
         <div class="form-group">
-            <label>What do you see as the most pressing issue London is facing right now?</label><br>
+            <label>What do you see as the most pressing issue your community is facing right now?</label><br>
             <input type="text" name="referendum" width="100%"></label>
         </div>
         <hr>
